# kruon

./: .gitignore  README.md  build_kruon_mvp_prd.py  findings.md  kruon_MVP产品需求说明书_2026-07-11.docx  kruon_MVP开发计划_2026-07-11.md  kruon_项目分析与产品路线图_2026-07-11.docx  package.json  pnpm-lock.yaml  progress.md  task_plan.md
.planning/: .active_plan
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main-control.json  world-readonly.json
apps/desktop/src-tauri/fixtures/compatibility/: claude-2.1.211.jsonl  codex-0.144.2.jsonl
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: main-control-commands.toml  world-readonly-commands.toml
apps/desktop/src-tauri/permissions/autogenerated/: accept_task.toml  cancel_run.toml  collect_artifacts.toml  create_sample_task.toml  enqueue_task_run.toml  export_alpha_metrics.toml  export_diagnostic_bundle.toml  focus_main_run.toml  get_pause_capability.toml  get_recovery_advice.toml  get_run.toml  get_world_snapshot.toml  latest_task_reviews.toml  list_artifacts.toml  list_queue.toml  list_run_audit.toml  open_world_view.toml  probe_connections.toml  record_completion_report.toml  replay_run.toml  restart_follow_up.toml  return_task.toml  trust_workspace.toml  untrust_workspace.toml
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/core/: adapter_host.rs  alpha_metrics.rs  database.rs  diagnostics.rs  domain.rs  error.rs  event_store.rs  m1.rs  m2.rs  m3.rs  m4.rs  mod.rs  path_policy.rs  process_supervisor.rs  release.rs  runtime.rs
(+149 files in other folders)
