[package]
name = "kruon-desktop"
version = "0.1.0"
description = "kruon desktop shell"
authors = ["kruon"]
edition = "2021"

[lib]
name = "kruon_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
