[package]
name = "kruon-desktop"
version = "0.1.0"
description = "kruon desktop shell"
authors = ["kruon"]
edition = "2021"

[lib]
name = "kruon_desktop_lib"
crate-type = ["rlib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38", features = ["bundled"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "w1_probe"
path = "src/bin/w1_probe.rs"
